fixed progressbar on small screens

--- a/src/css/Upload.css
+++ b/src/css/Upload.css
@@ -91,9 +91,10 @@
 
 .upload-filename-text {
     margin-top: 10px;
-    display: inline-block;
+    /* display: inline-block; */
+    min-width: 100px;
+    max-width: 275px;
     box-sizing: border-box;
-    width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
